# idafucker

./: .gitignore  CMakeLists.txt  README.md  idafucker.sln
idafucker/: .clang-format  idafucker.vcxproj  idafucker.vcxproj.filters  vcpkg.json
idafucker/include/: CoreDefines.hpp
idafucker/include/idafucker/: CoreDefines.hpp
idafucker/include/idafucker/Bootstrapper/: Bootstrapper.hpp
idafucker/include/idafucker/platform/: Application.hpp  Window.hpp
idafucker/include/idafucker/platform/windows/: WindowsApplication.hpp  WindowsWindow.hpp
idafucker/include/platform/windows/: WindowsWindow.hpp
idafucker/src/: EntryPoint.cpp  idafucker.cpp
idafucker/src/platform/windows/: WindowsApplication.cpp  WindowsWindow.cpp
src/idafucker-engine/: CMakeLists.txt  idafucker-engine.cpp  idafucker-engine.h
